--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1228,6 +1228,8 @@ eng:
         # potassium_concentration: "Teneur en potassium"
         # protein_concentration_index: "TP (Taux Protéïque)"
         protein_matters_concentration: "Protein matters concentration"
+        # provisionnal_grains_yield: "Rendement prévisionnel en grain"
+        # provisionnal_irrigation_water_input: "Quantité d'eau d'irrigation prévisionnelle"
         # reproductor: "Reproducteur"
         # sex: "Sexe"
         # shape: "Forme"
@@ -1788,6 +1790,7 @@ eng:
         # kilowatt: "Kilowatt"
         # kilowatt_hour: "Kilowatt par heure"
         # liter: "Litre"
+        # liter_per_square_meter: "litre par mètre carré"
         # mass_percent: "Pourcentage de masse"
         # megawatt: "Mégawatt"
         # meter: "Métre"
@@ -1803,6 +1806,7 @@ eng:
         # pair: "Paire"
         # percent: "Pourcent"
         # quintal: "Quintal"
+        # quintal_per_hectare: "Quintal par hectare"
         # second: "Seconde"
         square_meter: "Square meter"
         # ten: "Dix"
@@ -1827,6 +1831,7 @@ eng:
         # acetal: "Acetal"
         # actilact: "Actilact"
         # additive: "Additif"
+        # alexis: "Alexis"
         # anas: "Palmipède"
         animal: "Animal"
         # animal_group: "Troupeau"
@@ -1836,8 +1841,13 @@ eng:
         # apis: "Apidés"
         # asteraceae: "Astéracée"
         # aubues_soil: "Sols sur craie Nord Vienne (Aubues)"
+        # autan: "Autan"
+        # avena: "Avena"
+        # aventur: "Aventur"
         # aves: "Oiseau"
+        # aztec: "Aztec"
         # baler: "Botteleuse"
+        # biensur: "Biensur"
         bioproduct: "Bioproduct"
         # black_valley_soil: "Terres noires de vallées"
         # bos: "Bovin"
@@ -1847,6 +1857,7 @@ eng:
         # brassicaceae: "Crucifères"
         # building: "Bâtiment"
         # building_division: "Pièce de bâtiment"
+        # bussard: "Bussard"
         # cabernet_franc: "Cabernet franc"
         # cabernet_sauvignon: "Cabernet sauvignon"
         # caphorn: "Blé Caphorn"
@@ -1857,16 +1868,21 @@ eng:
         # chemical_fertiliser: "Engrais chimique"
         # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         # clay_soil: "Terre d'argile lourde"
+        # courtot: "Courtot"
         # cultivable_land_parcel: "Parcelle culturale"
+        # cultur: "Cultur"
         # disinfectant: "Désinfectant"
         # easement: "Aménagement foncier"
         # electricity: "Electricité"
         equipment: "Equipment"
+        # esperia: "Esperia"
+        # fabulis: "Fabulis"
         # flap_silt_soil: "Limons battants"
         # forager: "Ensileuse"
         # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
         fungus: "Fungus"
+        # galibier: "Galibier"
         # gallus: "Galinacée"
         # gas: "Essence"
         # grain: "Grain"
@@ -1882,12 +1898,17 @@ eng:
         immatter: "Immatter"
         # insecta: "Insecte"
         # insecticide: "Produit insecticide"
+        # isengrain: "Isengrain"
+        # karur: "Karur"
         # land_parcel: "Parcelle physique"
         # land_parcel_cluster: "Îlot"
         # land_parcel_group: "Groupe de parcelles physiques"
         # lepus: "Lagomorphe"
+        # levis: "Levis"
+        # lona: "Lona"
         # malus: "Pommier"
         # mammalia: "Mammifère"
+        # manital: "Manital"
         # manure: "Fumier"
         matter: "Matter"
         # meat: "Viande"
@@ -1897,12 +1918,15 @@ eng:
         # milk: "Lait"
         # mineral_food: "Aliment minéral"
         mineral_matter: "Mineral matter"
+        # miradoux: "Miradoux"
         # mollusca: "Mollusque"
         # molluscicide: "Produit molluscicide"
         # mower: "Faucheuse"
+        # oratorio: "Oratorio"
         organic_matter: "Organic matter"
         # osteichthyes: "Poissons osseux"
         # ovis: "Ovin"
+        # pescadou: "Pescadou"
         phytosanitary: "Phytosanitary" #?
         # pinot_noir: "Pinot noir"
         plant: "Plant"
@@ -1915,8 +1939,14 @@ eng:
         product_group: "Product group"
         property_title: "Property title"
         # prunus: "Prunier"
+        # qualital: "Qualital"
+        # quality: "Quality"
+        # quebon: "Quebon"
         # reaper: "Moissonneuse-batteuse"
+        # recital: "Recital"
         # red_chesnut_soil: "Terres rouges à chataigniers"
+        # renan: "Renan"
+        # runal: "Runal"
         # salmo: "Salmonidé"
         # salt: "Sel"
         # sand: "Sable"
@@ -1925,6 +1955,8 @@ eng:
         # sandy_clay_soil: "Sol argilo-sableux"
         # sauvignon: "Sauvignon"
         # sauvignon_blanc: "Sauvignon blanc"
+        # sculptur: "Sculptur"
+        # secale: "Secale"
         # seed: "Semence"
         service: "Service"
         # settlement: "Agencement"
@@ -1932,6 +1964,7 @@ eng:
         # silt_soil: "Limon"
         # silty_clay_loam_soil: "Sol limono-argileux"
         # silty_clay_soil: "Sol argilo-limoneux"
+        # soissons: "Soissons"
         # sorghum: "Sorgho"
         # sower: "Semoir"
         # sprayer: "Pulvérisateur"
@@ -1940,10 +1973,17 @@ eng:
         # sub_zone: "Sous zone"
         # sus: "Porcin"
         # swamp_peaty_soil: "Terre de marais tourbeux"
+        # sy_banco: "Sy banco"
+        # sy_cysco: "Sy cysco"
         # syrah: "Syrah"
+        # tablur: "Tablur"
+        # tamaro: "Tamaro"
         # tank: "Réservoir"
+        # texel: "Texel"
         # tractor: "Tracteur"
         # trailer: "Remorque"
+        # tremie: "Tremie"
+        # triticale: "Triticale"
         # triticum_aestivum: "Blé tendre"
         # triticum_durum: "Blé dur"
         # triticum_spelta: "Épeautre"
