--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1148,6 +1148,8 @@ spa:
         # potassium_concentration: "Teneur en potassium"
         # protein_concentration_index: "TP (Taux Protéïque)"
         # protein_matters_concentration: "Teneur en matières protéïques"
+        # provisionnal_grains_yield: "Rendement prévisionnel en grain"
+        # provisionnal_irrigation_water_input: "Quantité d'eau d'irrigation prévisionnelle"
         # reproductor: "Reproducteur"
         # sex: "Sexe"
         # shape: "Forme"
@@ -1665,6 +1667,7 @@ spa:
         # kilowatt: "Kilowatt"
         # kilowatt_hour: "Kilowatt par heure"
         # liter: "Litre"
+        # liter_per_square_meter: "litre par mètre carré"
         # mass_percent: "Pourcentage de masse"
         # megawatt: "Mégawatt"
         # meter: "Métre"
@@ -1680,6 +1683,7 @@ spa:
         # pair: "Paire"
         # percent: "Pourcent"
         # quintal: "Quintal"
+        # quintal_per_hectare: "Quintal par hectare"
         # second: "Seconde"
         # square_meter: "Mètre carré"
         # ten: "Dix"
@@ -1704,6 +1708,7 @@ spa:
         # acetal: "Acetal"
         # actilact: "Actilact"
         # additive: "Additif"
+        # alexis: "Alexis"
         # anas: "Palmipède"
         # animal: "Animal"
         # animal_group: "Troupeau"
@@ -1713,8 +1718,13 @@ spa:
         # apis: "Apidés"
         # asteraceae: "Astéracée"
         # aubues_soil: "Sols sur craie Nord Vienne (Aubues)"
+        # autan: "Autan"
+        # avena: "Avena"
+        # aventur: "Aventur"
         # aves: "Oiseau"
+        # aztec: "Aztec"
         # baler: "Botteleuse"
+        # biensur: "Biensur"
         # bioproduct: "Produit vivant"
         # black_valley_soil: "Terres noires de vallées"
         # bos: "Bovin"
@@ -1724,6 +1734,7 @@ spa:
         # brassicaceae: "Crucifères"
         # building: "Bâtiment"
         # building_division: "Pièce de bâtiment"
+        # bussard: "Bussard"
         # cabernet_franc: "Cabernet franc"
         # cabernet_sauvignon: "Cabernet sauvignon"
         # caphorn: "Blé Caphorn"
@@ -1734,16 +1745,21 @@ spa:
         # chemical_fertiliser: "Engrais chimique"
         # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         # clay_soil: "Terre d'argile lourde"
+        # courtot: "Courtot"
         # cultivable_land_parcel: "Parcelle culturale"
+        # cultur: "Cultur"
         # disinfectant: "Désinfectant"
         # easement: "Aménagement foncier"
         # electricity: "Electricité"
         # equipment: "Équipement"
+        # esperia: "Esperia"
+        # fabulis: "Fabulis"
         # flap_silt_soil: "Limons battants"
         # forager: "Ensileuse"
         # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
         # fungus: "Champignon"
+        # galibier: "Galibier"
         # gallus: "Galinacée"
         # gas: "Essence"
         # grain: "Grain"
@@ -1759,12 +1775,17 @@ spa:
         # immatter: "Immatérialisable"
         # insecta: "Insecte"
         # insecticide: "Produit insecticide"
+        # isengrain: "Isengrain"
+        # karur: "Karur"
         # land_parcel: "Parcelle physique"
         # land_parcel_cluster: "Îlot"
         # land_parcel_group: "Groupe de parcelles physiques"
         # lepus: "Lagomorphe"
+        # levis: "Levis"
+        # lona: "Lona"
         # malus: "Pommier"
         # mammalia: "Mammifère"
+        # manital: "Manital"
         # manure: "Fumier"
         # matter: "Matérialisable"
         # meat: "Viande"
@@ -1774,12 +1795,15 @@ spa:
         # milk: "Lait"
         # mineral_food: "Aliment minéral"
         # mineral_matter: "Matière minérale"
+        # miradoux: "Miradoux"
         # mollusca: "Mollusque"
         # molluscicide: "Produit molluscicide"
         # mower: "Faucheuse"
+        # oratorio: "Oratorio"
         # organic_matter: "Matière organique"
         # osteichthyes: "Poissons osseux"
         # ovis: "Ovin"
+        # pescadou: "Pescadou"
         # pinot_noir: "Pinot noir"
         # plant: "Végétal"
         # plant_food: "Nourriture végétale"
@@ -1791,8 +1815,14 @@ spa:
         # product_group: "Groupe de produit"
         # property_title: "Titre de propriété"
         # prunus: "Prunier"
+        # qualital: "Qualital"
+        # quality: "Quality"
+        # quebon: "Quebon"
         # reaper: "Moissonneuse-batteuse"
+        # recital: "Recital"
         # red_chesnut_soil: "Terres rouges à chataigniers"
+        # renan: "Renan"
+        # runal: "Runal"
         # salmo: "Salmonidé"
         # salt: "Sel"
         # sand: "Sable"
@@ -1801,6 +1831,8 @@ spa:
         # sandy_clay_soil: "Sol argilo-sableux"
         # sauvignon: "Sauvignon"
         # sauvignon_blanc: "Sauvignon blanc"
+        # sculptur: "Sculptur"
+        # secale: "Secale"
         # seed: "Semence"
         # service: "Service"
         # settlement: "Agencement"
@@ -1808,6 +1840,7 @@ spa:
         # silt_soil: "Limon"
         # silty_clay_loam_soil: "Sol limono-argileux"
         # silty_clay_soil: "Sol argilo-limoneux"
+        # soissons: "Soissons"
         # sorghum: "Sorgho"
         # sower: "Semoir"
         # sprayer: "Pulvérisateur"
@@ -1816,10 +1849,17 @@ spa:
         # sub_zone: "Sous zone"
         # sus: "Porcin"
         # swamp_peaty_soil: "Terre de marais tourbeux"
+        # sy_banco: "Sy banco"
+        # sy_cysco: "Sy cysco"
         # syrah: "Syrah"
+        # tablur: "Tablur"
+        # tamaro: "Tamaro"
         # tank: "Réservoir"
+        # texel: "Texel"
         # tractor: "Tracteur"
         # trailer: "Remorque"
+        # tremie: "Tremie"
+        # triticale: "Triticale"
         # triticum_aestivum: "Blé tendre"
         # triticum_durum: "Blé dur"
         # triticum_spelta: "Épeautre"
