--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -888,7 +888,9 @@ arb:
         # energy: "Energie"
         # length: "Longueur"
         # luminous_intensity: "Intensité lumineuse"
+        # mass_area_density: "Quantité de matière par unité de surface"
         # mass_concentration: "Concentration massique"
+        # mass_density: "Quantité de matière par unité de matière"
         # none: "Aucune"
         # power: "Puissance"
         # specific_volume: "Volume spécifique"
@@ -899,7 +901,8 @@ arb:
         # weight: "Masse"
       # name: "Dimensions"
     document_categories:
-      attributes: #?
+      attributes:
+        # acta_category: "Category"
       items:
         # accountancy: "Comptabilité"
         # animal_farming: "Élevage"
@@ -1049,6 +1052,8 @@ arb:
             # negative: "Negatif"
             # positive: "Positif"
         isu_index: #?
+        leaf_count:
+          choices: #?
         lipolysis: #?
         livestock_unit: #?
         mammalia_born_condition:
@@ -1087,6 +1092,7 @@ arb:
         phosphorus_concentration: #?
         plant_life_state:
           choices:
+            # bolting: "Montaison"
             # germination: "Germination"
             # maturity: "Maturité"
             # senescence: "Senescence"
@@ -1116,6 +1122,7 @@ arb:
         # animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
         # animal_life_state: "Phase du bioprocessus de vie d’un animal"
         # application_width: "Largeur de travail"
+        # available_water_capacity: "Réserve utile (RU)"
         # calving_ease_index: "Index de facilité de naissane"
         # clostridial_spores_concentration: "Concentration en spores butyriques"
         # cultural_soil_state: "Etat cultural du sol"
@@ -1516,6 +1523,7 @@ arb:
         # spreader: "Épandeur à engrais"
         # spreader_trailer: "Épandeur à fumier"
         # sunflower_crop: "Culture de tournesol"
+        # swamp_peaty_land_parcel: "Parcelle de marais tourbeux"
         # technician: "Technicien"
         # temporary_meadow_crop: "Culture de prairie temporaire"
         # tractor: "Tracteur"
@@ -1731,6 +1739,7 @@ arb:
         # bioproduct: "Produit vivant"
         # black_valley_soil: "Terres noires de vallées"
         # bos: "Bovin"
+        # brassage_winter_hordeum: "Orge d'hiver de brasserie"
         # brassica_napus: "Colza"
         # brassica_nigra: "Moutarde noire"
         # brassica_rapa: "Navet"
@@ -1786,6 +1795,8 @@ arb:
         # lepus: "Lagomorphe"
         # levis: "Levis"
         # lona: "Lona"
+        # low_protein_brassage_winter_hordeum: "Orge d'hiver de brasserie (faible teneur en protéïnes)"
+        # low_protein_spring_hordeum: "Orge de printemps (faible teneur en protéïnes)"
         # malus: "Pommier"
         # mammalia: "Mammifère"
         # manital: "Manital"
@@ -1848,6 +1859,7 @@ arb:
         # sower: "Semoir"
         # sprayer: "Pulvérisateur"
         # spreader: "Épandeur"
+        # spring_hordeum: "Orge de printemps"
         # straw: "Pailles"
         # sub_zone: "Sous zone"
         # sus: "Porcin"
@@ -1872,6 +1884,7 @@ arb:
         # vitis_vinifera: "Vitis vinifera"
         # water: "Eau"
         # wine: "Vin"
+        # winter_hordeum: "Orge d'hiver"
         # worker: "Travailleur"
         # zea: "Maïs"
         # zone: "Zone physique"
