--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -157,11 +157,8 @@ spa:
       listing_nodes: "Escoge las informaciones para extraer" #?
       welcome: "Bienvenido sobre Ekylibre, %{user}" #?
     backend/contacts: #?
-    backend/cultivable_land_parcels:
-      # edit: "Modifier la parcelle culturale\_: %{name}"
-      # index: "Parcelles culturales"
-      # new: "Ajouter une parcelle culturale"
-      # show: "Parcelle culturale\_: %{name}"
+    backend/cultivable_land_parcels: #?
+    backend/cultivable_zones: #?
     backend/cultivations: #?
     backend/currencies: #?
     backend/custom_field_choices:
