--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1358,7 +1358,6 @@ jpn:
         # calf: "Veau"
         # cattle_herd: "Troupeau de bovins"
         # crop: "Culture"
-        # cultivable_land_parcel: "Parcelle culturale"
         # electricity: "Electricité"
         # equipment: "Équipement"
         # equipment_rent: "Location d’équipement"
@@ -1429,9 +1428,7 @@ jpn:
         # apple_crop: "Verger de pommiers"
         # aubues_land_parcel: "Parcelle sur craie Nord Vienne (Aubues)"
         # baler: "Botteleuse"
-        # barley_crop: "Culture d’orge"
         # barley_grain: "Grain d’orge"
-        # barley_seed_25: "Semence d’orge 25kg"
         # black_valley_land_parcel: "Parcelle de terre noire de vallées"
         # brassicaceae_fungicide: "Fongicide colza"
         # building: "Bâtiment"
@@ -1447,7 +1444,7 @@ jpn:
         # clay_land_parcel: "Parcelle d'argile lourde"
         # clay_limestone_land_parcel: "Parcelle argilo-calcaire (Groies)"
         # complete_herbicide: "Herbicide total"
-        # coop:ammonitre_33, 5%_vr: "ammonitre COOP 33,5% vr"
+        # coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vr"
         # coop:ficelle_filogamm_350_bob_5kg: "ficelle filogamm 350 bob 5kg"
         # coop:metarex_rg_tds_20kg: "metarex rg tds 20kg"
         # coop:sel_mer_essore_la_baleine_sac_25kg: "sel mer essore la baleine sac 25kg"
@@ -1455,11 +1452,9 @@ jpn:
         # corn_crop: "Culture de maïs"
         # corn_grain: "Graine de maïs"
         # cow_milk: "Lait de vache"
-        # cultivable_land_parcel: "Parcelle culturale"
         # diesel: "Diesel"
         # duck_band: "Bande de canards"
         # duck_herd: "Groupe de canards"
-        # durum_wheat_crop: "Culture de blé dur"
         # electricity: "Électricité"
         # equipment: "Équipement"
         # equipment_building_division: "Emplacement de stockage du matériel"
@@ -1571,7 +1566,6 @@ jpn:
         # cattle_herd: "Troupeau de bovins"
         # chemical_fertilizer: "Engrais chimique"
         # crop: "Culture"
-        # cultivable_land_parcel: "Parcelle culturale"
         # duck_band: "Bande de canards"
         # duck_herd: "Groupe de canards"
         # electricity: "Électricité"
